# macp-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  release-plz.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: bump-proto.yml  ci.yml  docker.yml  integration-tests.yml  notify-website.yml  publish.yml  release-plz.yml  scheduled-audit.yml
benches/: replay_bench.rs
crates/macp-auth/: CHANGELOG.md  Cargo.toml  README.md
crates/macp-auth/src/: lib.rs  security.rs
crates/macp-auth/src/auth/: chain.rs  resolver.rs
crates/macp-auth/src/auth/resolvers/: jwt_bearer.rs
crates/macp-core/: CHANGELOG.md  Cargo.toml  README.md
crates/macp-core/src/: decision.rs  error.rs  lib.rs  mode.rs  session.rs
crates/macp-core/src/policy/: mod.rs  rules.rs
crates/macp-modes/: CHANGELOG.md  Cargo.toml  README.md
crates/macp-modes/src/: lib.rs  mode_registry.rs  step.rs
crates/macp-modes/src/mode/: decision.rs  handoff.rs  mod.rs  multi_round.rs  passthrough.rs  proposal.rs  quorum.rs  task.rs  util.rs
crates/macp-modes/tests/: coordination_library.rs
crates/macp-pb/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/macp-pb/src/: lib.rs
crates/macp-policy/: CHANGELOG.md  Cargo.toml  README.md
crates/macp-policy/src/: defaults.rs  evaluator.rs  lib.rs  registry.rs
crates/macp-storage/: CHANGELOG.md  Cargo.toml  README.md
crates/macp-storage/src/: lib.rs  log_store.rs  registry.rs
crates/macp-storage/src/storage/: compaction.rs  file.rs  memory.rs  migration.rs  mod.rs  recovery.rs  redis_backend.rs  rocksdb.rs
docs/: API.md  README.md  architecture.md  change-review-phases-a-e.md  deployment.md  examples.md  getting-started.md  modes.md  policy.md  testing.md
integration_tests/: Cargo.toml
integration_tests/src/: helpers.rs  server_manager.rs
integration_tests/tests/: tier1_jwt.rs
integration_tests/tests/tier1_protocol/: mod.rs  test_backends.rs  test_concurrent_sessions.rs  test_initialize.rs  test_limits.rs  test_mode_happy_paths.rs  test_mode_registry.rs  test_persistence_replay.rs  test_policy_registry.rs  test_promote_mode.rs  test_rfc_cross_cutting.rs  test_session_lifecycle.rs  test_startup_gate.rs  test_suspend_resume.rs  test_tls.rs  test_validation_gaps.rs  test_watch_streams.rs
integration_tests/tests/tier3_e2e/: test_e2e_decision_with_signals.rs
plans/: BUILD_STATUS.md  IMPROVEMENT_PLAN.md
plans/current/: README.md  phase-a-prefreeze.md  phase-b-security-correctness.md  phase-c-ci-foundation.md  phase-d-hardening.md  phase-e-features.md  rfc-changes.md
plans/defer/: README.md  follow_ons.md  session_composition.md  workflow_primitives.md
src/: error.rs  lib.rs  main.rs  metrics.rs  policy_engine.rs  replay.rs  runtime.rs  server.rs  session.rs  stream_bus.rs
src/extensions/: registry.rs
tests/: concurrent_messages.rs  conformance_loader.rs  file_backend_integration.rs  integration_mode_lifecycle.rs  replay_round_trip.rs  stream_integration.rs
tests/conformance/: decision_happy_path.json  decision_reject_paths.json  multi_round_reject_paths.json  quorum_reject_paths.json  task_reject_paths.json
