[package]
name = "macp-auth"
version = "0.4.0"
edition = "2021"
description = "MACP authentication: request identity derivation, the security layer (rate limits, payload limits), and bearer/JWT auth resolvers."
publish = false

[dependencies]
macp-core = { workspace = true }
tonic = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
