[package]
name = "macp-core"
version = "0.4.0"
edition = "2021"
description = "MACP coordination vocabulary: error, session model, decision domain types, and the policy evaluation trait. Transport-free."
publish = false

[dependencies]
macp-pb = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
