[package]
name = "macp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MACP coordination vocabulary: error, session model, decision domain types, and the policy evaluation trait. Transport-free."
readme = "README.md"

[dependencies]
macp-pb = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
