[package]
name = "macp-modes"
version = "0.4.0"
edition = "2021"
description = "MACP coordination mode implementations (decision, proposal, task, handoff, quorum, multi_round) and the mode registry. Policy is injected via macp_core::PolicyEvaluator."
publish = false

[dependencies]
macp-core = { workspace = true }
macp-pb = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Tests construct modes with the default evaluator; production code injects one
# via macp_core::PolicyEvaluator, so this is a test-only dependency and never
# reaches downstream consumers of macp-modes.
macp-policy = { workspace = true }
