[package]
name = "macp-modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MACP coordination mode implementations (decision, proposal, task, handoff, quorum, multi_round) and the mode registry. Policy is injected via macp_core::PolicyEvaluator."
readme = "README.md"

[dependencies]
macp-core = { workspace = true }
macp-pb = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
# Tests construct modes with the default evaluator; production code injects one
# via macp_core::PolicyEvaluator, so this is a test-only dependency and never
# reaches downstream consumers of macp-modes.
macp-policy = { workspace = true }
