[package]
name = "macp-pb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generated MACP protobuf message types (prost-only, transport-free)."
readme = "README.md"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
# Required for the `links`-provided DEP_MACP_PROTO_PROTO_DIR build env var.
macp-proto = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
