[package]
name = "macp-policy"
version = "0.4.0"
edition = "2021"
description = "MACP default governance policy: per-mode rule schemas, the policy registry, and the DefaultPolicyEvaluator implementation of macp_core::PolicyEvaluator."
publish = false

[dependencies]
macp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
