[package]
name = "macp-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MACP default governance policy: per-mode rule schemas, the policy registry, and the DefaultPolicyEvaluator implementation of macp_core::PolicyEvaluator."
readme = "README.md"

[dependencies]
macp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
