[package]
name = "macp-storage"
version = "0.4.0"
edition = "2021"
description = "MACP persistence layer: append-only log, session registry, and pluggable storage backends (file, memory, rocksdb, redis)."
publish = false

[features]
default = []
rocksdb-backend = ["dep:rocksdb"]
redis-backend = ["dep:redis"]

[dependencies]
macp-core = { workspace = true }
macp-pb = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
