[package]
name = "macp-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MACP persistence layer: append-only log, session registry, and pluggable storage backends (file, memory, rocksdb, redis)."
readme = "README.md"

[features]
default = []
rocksdb-backend = ["dep:rocksdb"]
redis-backend = ["dep:redis"]

[dependencies]
macp-core = { workspace = true }
macp-pb = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rocksdb = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
